# simulation_without_hardware

./: .env  .env.example  .gitignore  MVP_ALIGNMENT.md  OPENCLAWD_WS_SETUP.md  README.md  RUNBOOK.md  backend.py  launcher.sh  pytest.ini  requirements-dev.txt  requirements.txt  scenario_runner.py  simulator.py  simulator_ui.py  smoke_test.py  speech_pipeline.py
app/: backend.py  (+1 more)
device_runtime/: .env.example  README.md  __init__.py  pyproject.toml  requirements-raspi.txt
device_runtime/application/: ports.py
device_runtime/application/services/: __init__.py  device_state_machine.py  diagnostics_service.py  display_model_service.py  protocol_service.py  runtime_config.py
device_runtime/deploy/: device-runtime.service
device_runtime/domain/: __init__.py  capabilities.py  events.py  state.py
device_runtime/entrypoints/: raspi_main.py
device_runtime/infrastructure/audio/: sounddevice_capture.py
device_runtime/infrastructure/config/: env_loader.py
device_runtime/infrastructure/diagnostics/: null_diagnostics.py
device_runtime/infrastructure/display/: null_display.py  tk_preview_display.py  whisplay_display.py
device_runtime/infrastructure/input/: __init__.py  gpio_button.py  keyboard_button.py  null_button.py
device_runtime/infrastructure/transport/: websocket_client.py
device_runtime/scripts/: deploy_raspberry.sh  install_raspberry.sh  run_runtime.sh  smoke_check.sh
device_runtime/src/device_runtime/: __init__.py
device_runtime/tests/: test_runtime_adapters.py  test_runtime_foundation.py  test_runtime_infrastructure.py  test_runtime_packaging.py
(+100 files in other folders)
